--- a/src/pages/Chat.css
+++ b/src/pages/Chat.css
@@ -65,7 +65,7 @@
 .chat-container {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 200px); /* Account for header and input */
+  height: calc(100vh - 120px); /* Account for header only */
   min-height: 400px;
   background: transparent;
   border: none;
